Did all Javascript

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Clock project</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="icons8-clock.gif" type="image/x-icon">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="clock">
